# ipz-projekat1

populate_db/: .env  Cargo.toml  README.md  movies.csv
populate_db/migrations/: 20240503160609_init.sql
populate_db/src/: macros.rs  main.rs
